# golident

./: LICENSE-MIT  README.md  pyproject.toml
img/: example_images.py
src/golident/: __init__.py  life.py  main.py
tests/: test_golident.py  test_version.py
